# operations-research-bok

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: create-technique-issues.yml
docs/: index.md
docs/military-operations/: air-operations.md  army-operations.md  cyber-operations.md  multi-domain-operations.md  navy-operations.md  overview.md  space-operations.md
docs/stylesheets/: extra.css
docs/techniques/: index.md  prompt-template.md
docs/techniques/decision-analysis/: index.md  prompt.md
docs/techniques/game-theory/: index.md  prompt.md
docs/techniques/heuristics-metaheuristics/: index.md  prompt.md
docs/techniques/integer-programming/: index.md  prompt.md
docs/techniques/linear-programming/: index.md  prompt.md
docs/techniques/network-analysis/: index.md  prompt.md
docs/techniques/queueing-theory/: index.md  prompt.md
docs/techniques/simulation/: index.md  prompt.md
docs/techniques/stochastic-processes/: index.md  prompt.md
