[project]
name = "operations-research-bok"
version = "0.1.0"
description = "A quick-start guide to Operations Research for engineers, with a focus on military operations applications."
requires-python = ">=3.11"
dependencies = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.uv]
dev-dependencies = []
